--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "rules": {
     "semi": "off",
@@ -12,5 +13,6 @@
     "require-jsdoc":"off",
     "linebreak-style": 0
   },
+  "plugins": ["jest"],
   "extends": ["eslint:recommended", "google"]
 }
